@@ -1,3 +1,8 @@
+2005-12-21  Jim Meyering  <jim@meyering.net>
+
+	* chdir-safer.m4: New file.
+	* jm-macros.m4: Require gl_CHDIR_SAFER.
+
 2005-12-05  Andreas Gruenbacher  <agruen@suse.de>
 
 	* acl.m4 (AC_FUNC_ACL): Add POSIX ACL and Linux-specific acl tests.
